// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Meta スナップショットテスト propsが全てある場合 1`] = `
<head>
  <title>
    title | site name
  </title>
  <meta
    content="description"
    name="description"
  />
  <meta
    content="keywords"
    name="keywords"
  />
  <style
    data-styled="active"
    data-styled-version="5.3.6"
  />
</head>
`;

exports[`Meta スナップショットテスト propsが全てない場合 1`] = `
<head>
  <title>
    site name
  </title>
  <meta
    content="default description"
    name="description"
  />
  <style
    data-styled="active"
    data-styled-version="5.3.6"
  />
</head>
`;

exports[`Meta スナップショットテスト propsにchildrenがない場合 1`] = `
<head>
  <title>
    title | site name
  </title>
  <meta
    content="description"
    name="description"
  />
  <style
    data-styled="active"
    data-styled-version="5.3.6"
  />
</head>
`;

exports[`Meta スナップショットテスト propsにdescriptionがない場合 1`] = `
<head>
  <title>
    title | site name
  </title>
  <meta
    content="default description"
    name="description"
  />
  <meta
    content="keywords"
    name="keywords"
  />
  <style
    data-styled="active"
    data-styled-version="5.3.6"
  />
</head>
`;

exports[`Meta スナップショットテスト propsにtitleがない場合 1`] = `
<head>
  <title>
    site name
  </title>
  <meta
    content="description"
    name="description"
  />
  <meta
    content="keywords"
    name="keywords"
  />
  <style
    data-styled="active"
    data-styled-version="5.3.6"
  />
</head>
`;
